--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-sass": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "flux": "^2.1.1",
     "font-awesome": "^4.6.3",
     "jquery": "^3.1.0",
     "material-ui": "^0.15.4",
