--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors"
   },
+  "engine": {
+    "node": "6.3.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
