--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors"
   },
-  "engine": {
-    "engines" : { "node" : "6.3.1" }
+  "engines": {
+    "node" : "6.3.1" 
   },
   "keywords": [],
   "author": "",
