--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "webpack --config ./webpack-prod.config.js --progress --colors"
+    "postinstall": "webpack --config ./webpack.config.js --progress --colors"
   },
   "engines": {
     "node" : "v6.3.1" 
