--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.0",
     "react-router": "^2.7.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -57,9 +61,5 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
   }
 }
