--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.7"
   }
 }
