--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
-  },
-  "devDependencies": {
+    "webpack-hot-middleware": "^2.12.2",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.4",
